--- a/src/MS.Employee.Worker.Console/MS.Employee.Worker.Console.csproj
+++ b/src/MS.Employee.Worker.Console/MS.Employee.Worker.Console.csproj
@@ -37,6 +37,10 @@
       <HintPath>..\..\packages\NLog.4.1.2\lib\net45\NLog.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="SimpleInjector, Version=3.1.0.0, Culture=neutral, PublicKeyToken=984cb50dea722e99, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\SimpleInjector.3.1.0\lib\net45\SimpleInjector.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -53,6 +57,20 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MS.Employee.Worker\MS.Employee.Worker.csproj">
+      <Project>{be563671-a019-4096-9b5d-e444253f45aa}</Project>
+      <Name>MS.Employee.Worker</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MS.Employee\MS.Employee.csproj">
+      <Project>{93a1edeb-31b5-4746-b5bb-e1ce26616d85}</Project>
+      <Name>MS.Employee</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MS.Infrastructure\MS.Infrastructure.csproj">
+      <Project>{5adb546a-787e-438e-8d4e-c11423b51c23}</Project>
+      <Name>MS.Infrastructure</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
