--- a/src/MS.Infrastructure/MS.Infrastructure.csproj
+++ b/src/MS.Infrastructure/MS.Infrastructure.csproj
@@ -42,6 +42,10 @@
       <HintPath>..\..\packages\RabbitMQ.Client.3.5.5\lib\net40\RabbitMQ.Client.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="SimpleInjector, Version=3.1.0.0, Culture=neutral, PublicKeyToken=984cb50dea722e99, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\SimpleInjector.3.1.0\lib\net45\SimpleInjector.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -65,6 +69,7 @@
     <Compile Include="Handling\IEventHandler.cs" />
     <Compile Include="Handling\IEventRegistrar.cs" />
     <Compile Include="Handling\Registrar.cs" />
+    <Compile Include="IRegistrar.cs" />
     <Compile Include="Messaging\EventBus.cs" />
     <Compile Include="Messaging\ICommand.cs" />
     <Compile Include="Messaging\ICommandBus.cs" />
@@ -72,13 +77,17 @@
     <Compile Include="Messaging\IEvent.cs" />
     <Compile Include="Messaging\IEventBus.cs" />
     <Compile Include="Messaging\CommandBus.cs" />
+    <Compile Include="Messaging\IMessageChannel.cs" />
     <Compile Include="Messaging\RabbitMQ\Message.cs" />
     <Compile Include="Messaging\RabbitMQ\MessageFactory.cs" />
     <Compile Include="Messaging\RabbitMQ\QueueNamingFactory.cs" />
     <Compile Include="Messaging\RabbitMQ\RabbitMQServer.cs" />
+    <Compile Include="Messaging\MessageChannel.cs" />
+    <Compile Include="MSContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Messaging\RabbitMQ\RabbitMQClient.cs" />
     <Compile Include="ErrorHandling\Result.cs" />
+    <Compile Include="Messaging\Registrar.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="RabbitMQ\" />
