--- a/src/MS.Infrastructure/packages.config
+++ b/src/MS.Infrastructure/packages.config
@@ -3,4 +3,5 @@
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net46" />
   <package id="NLog" version="4.1.2" targetFramework="net46" />
   <package id="RabbitMQ.Client" version="3.5.5" targetFramework="net46" />
+  <package id="SimpleInjector" version="3.1.0" targetFramework="net46" />
 </packages>
