--- a/src/MS.Web/packages.config
+++ b/src/MS.Web/packages.config
@@ -19,5 +19,6 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net46" />
   <package id="NLog" version="4.1.2" targetFramework="net46" />
   <package id="Respond" version="1.2.0" targetFramework="net46" />
+  <package id="SimpleInjector" version="3.1.0" targetFramework="net46" />
   <package id="WebGrease" version="1.5.2" targetFramework="net46" />
 </packages>
