--- a/src/MS.Employee.Worker.Console/MS.Employees.Worker.CLI.csproj
+++ b/src/MS.Employee.Worker.Console/MS.Employees.Worker.CLI.csproj
@@ -4,15 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{93A1EDEB-31B5-4746-B5BB-E1CE26616D85}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{538FBC4B-00B4-41E7-8192-9DCCC3B9BD93}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MS.Employee</RootNamespace>
-    <AssemblyName>MS.Employee</AssemblyName>
+    <RootNamespace>MS.Employees.Worker.CLI</RootNamespace>
+    <AssemblyName>MS.Employees.Worker.CLI</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -48,22 +51,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Commands\CreateEmployeeCommand.cs" />
-    <Compile Include="ErrorHandling\EmployeeError.cs" />
-    <Compile Include="Model\Employee.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Registrar.cs" />
-    <Compile Include="Services\EmployeeService.cs" />
-    <Compile Include="Services\IEmployeeService.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MS.Employee.Worker\MS.Employees.Worker.csproj">
+      <Project>{be563671-a019-4096-9b5d-e444253f45aa}</Project>
+      <Name>MS.Employees.Worker</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MS.Employee\MS.Employees.csproj">
+      <Project>{93a1edeb-31b5-4746-b5bb-e1ce26616d85}</Project>
+      <Name>MS.Employees</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MS.Infrastructure\MS.Infrastructure.csproj">
       <Project>{5adb546a-787e-438e-8d4e-c11423b51c23}</Project>
       <Name>MS.Infrastructure</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
