--- a/src/MS.Employee.Worker/MS.Employees.Worker.csproj
+++ b/src/MS.Employee.Worker/MS.Employees.Worker.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{BE563671-A019-4096-9B5D-E444253F45AA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MS.Employee.Worker</RootNamespace>
-    <AssemblyName>MS.Employee.Worker</AssemblyName>
+    <RootNamespace>MS.Employees.Worker</RootNamespace>
+    <AssemblyName>MS.Employees.Worker</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -56,9 +56,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MS.Employee\MS.Employee.csproj">
+    <ProjectReference Include="..\MS.Employee\MS.Employees.csproj">
       <Project>{93a1edeb-31b5-4746-b5bb-e1ce26616d85}</Project>
-      <Name>MS.Employee</Name>
+      <Name>MS.Employees</Name>
     </ProjectReference>
     <ProjectReference Include="..\MS.Infrastructure\MS.Infrastructure.csproj">
       <Project>{5adb546a-787e-438e-8d4e-c11423b51c23}</Project>
