--- a/src/MS.Web/MS.Web.csproj
+++ b/src/MS.Web/MS.Web.csproj
@@ -223,9 +223,9 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MS.Employee\MS.Employee.csproj">
+    <ProjectReference Include="..\MS.Employee\MS.Employees.csproj">
       <Project>{93a1edeb-31b5-4746-b5bb-e1ce26616d85}</Project>
-      <Name>MS.Employee</Name>
+      <Name>MS.Employees</Name>
     </ProjectReference>
     <ProjectReference Include="..\MS.Infrastructure\MS.Infrastructure.csproj">
       <Project>{5adb546a-787e-438e-8d4e-c11423b51c23}</Project>
