--- a/wrap/MS.Employees/project.json
+++ b/wrap/MS.Employees/project.json
@@ -12,6 +12,18 @@
         "SimpleInjector": "3.1.0",
         "MS.Infrastructure": "1.0.0-*"
       }
+    },
+    "net451": {
+      "wrappedProject": "../../src/MS.Employee/MS.Employees.csproj",
+      "bin": {
+        "assembly": "../../src/MS.Employee/obj/{configuration}/MS.Employees.dll",
+        "pdb": "../../src/MS.Employee/obj/{configuration}/MS.Employees.pdb"
+      },
+      "dependencies": {
+        "NLog": "4.1.2",
+        "SimpleInjector": "3.1.0",
+        "MS.Infrastructure": "1.0.0-*"
+      }
     }
   }
 }
