--- a/src/MS.Web/Properties/launchSettings.json
+++ b/src/MS.Web/Properties/launchSettings.json
@@ -4,6 +4,7 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
+        "DNX_IIS_RUNTIME_FRAMEWORK": "DNX46",
         "ASPNET_ENV": "Development"
       },
       "sdkVersion": "dnx-clr-win-x86.1.0.0-beta5"
