--- a/src/MS.Web/project.json
+++ b/src/MS.Web/project.json
@@ -13,7 +13,9 @@
         "Microsoft.Framework.Configuration.Json": "1.0.0-beta5",
         "Microsoft.Framework.Logging": "1.0.0-beta5",
         "Microsoft.Framework.Logging.Console": "1.0.0-beta5",
-        "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0-beta5"
+        "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0-beta5",
+        "System.Collections": "4.0.10-beta-23019",
+        "SimpleInjector.MVC3": "3.1.0"
     },
 
     "commands": {
@@ -21,14 +23,13 @@
     },
 
     "frameworks": {
-        "dnx451": {},
-        "dnx46": {
+        "dnx451": {
             "dependencies": {
                 "MS.Employees": "1.0.0-*",
                 "MS.Infrastructure": "1.0.0-*"
             }
-        },
-        "dnxcore50": { }
+
+        }
     },
 
     "exclude": [
