--- a/src/MS.Infrastructure/packages.config
+++ b/src/MS.Infrastructure/packages.config
@@ -4,4 +4,5 @@
   <package id="NLog" version="4.1.2" targetFramework="net46" />
   <package id="RabbitMQ.Client" version="3.5.5" targetFramework="net46" />
   <package id="SimpleInjector" version="3.1.0" targetFramework="net46" />
+  <package id="SimpleInjector.Extensions.ExecutionContextScoping" version="3.1.0" targetFramework="net451" />
 </packages>
