--- a/src/MS.Web/project.json
+++ b/src/MS.Web/project.json
@@ -15,7 +15,8 @@
         "Microsoft.Framework.Logging.Console": "1.0.0-beta5",
         "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0-beta5",
         "System.Collections": "4.0.10-beta-23019",
-        "SimpleInjector.MVC3": "3.1.0"
+        "SimpleInjector.MVC3": "3.1.0",
+        "SimpleInjector.Extensions.ExecutionContextScoping": "3.1.0"
     },
 
     "commands": {
