start worker with web app for now

--- a/src/MS.Web/project.json
+++ b/src/MS.Web/project.json
@@ -27,7 +27,8 @@
         "dnx451": {
             "dependencies": {
                 "MS.Employees": "1.0.0-*",
-                "MS.Infrastructure": "1.0.0-*"
+                "MS.Infrastructure": "1.0.0-*",
+                "MS.Employees.Worker": "1.0.0-*"
             }
 
         }
